# AI-Invoice-Knowledge

./: .env.example  .gitignore  MANIFEST.in  README.md  pyproject.toml  run_server.py
apps/ui/: .env.example  .eslintrc.cjs  README.md  eslint.config.js  index.html  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts  vitest.config.ts
data/training/: classifier_example.csv  predictive_example.csv
docs/: ai_tools_overview.md  deep_agents.md  invoice_portal.md  license_automation.md  license_management.md  minimalist_dual_theme_app_ui.md  operations.md  repository_architecture_review.md  settings_management.md
dotnet/: AIInvoiceSystem.sln
dotnet/AIInvoiceSystem.API/: AIInvoiceSystem.API.csproj  Program.cs
dotnet/AIInvoiceSystem.Core/: AIClient.cs
dotnet/AIInvoiceSystem.Core.Tests/: AIClientLicenseTests.cs  AIInvoiceSystem.Core.Tests.csproj
dotnet/Watchdog/: Install-AIInvoiceWatchdog.ps1
keys/: license_public.pem
models/: predictive.joblib
scripts/: generate_license.py  generate_predictive_synth.py  generate_synthetic.py  license_workflow.py  security_provision.py  watchdog.ps1
src/ai_invoice/: cli.py  config.py  license.py  license_generator.py  schemas.py  service.py  settings_store.py  trial.py
src/api/: license_validator.py  main.py  middleware.py  security.py
tests/: test_cors_integration.py  test_deep_agent.py  test_invoice_portal.py  test_license_validator.py  test_middleware.py  test_ocr_postprocess.py  test_predict_api.py  test_predictive_router.py  test_settings_admin.py  test_trial_license.py  test_workspace_router.py
(+64 files in other folders)
