[project]
name = "ai-invoice-system"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.112",
  "jinja2>=3.1",
  "httpx>=0.27",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "python-multipart>=0.0.9",
  "Pillow>=10.4",
  "pytesseract>=0.3.13",
  "pdf2image>=1.17.0",
  "scikit-learn>=1.5",
  "joblib>=1.4",
  "xgboost>=2.1",
  "numpy>=2.0",
  "pandas>=2.2",
  "opencv-python>=4.10",
  "spacy>=3.7",
  "faker>=25.0",
  "deepagents>=0.0.7",
  "cryptography>=42.0",
]

[tool.uv]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"api" = [
  "templates/*.html",
  "templates/**/*.html",
  "static/**/*",
]

[tool.setuptools.entry-points]
console_scripts = [
  "invoiceai=ai_invoice.cli:main",
]
